--- a/provider_server/templates/accounts/profile.html
+++ b/provider_server/templates/accounts/profile.html
@@ -7,15 +7,14 @@
     <div class="profile-header">
         <h1>프로필</h1>
     </div>
-    <h2><span class="company-name">{{ request.user.username }}</span> 님</h2>
     <div class="profile-body">
         <!-- 로그아웃 버튼 추가 -->
-        <form action="{% url 'logout' %}" method="post">
+        <form action="{% url 'accountst:provider_logout' %}" method="post">
             {% csrf_token %}
             <button type="submit">로그아웃</button>
         </form>
     </div>
-    
+
 
 </div>
 <style>
