✨ feat     : provider_server api 토큰 발급, 시크릿키 관리

--- a/admin_panel/templates/base.html
+++ b/admin_panel/templates/base.html
@@ -144,7 +144,7 @@
                 {% block content %}{% endblock %}
             </div>
             <footer class="footer">
-                <small>&copy; 2025 EcoAnE. All rights reserved.</small>
+                {% include 'components/footer.html' %}
             </footer>
         </div>
     {% else %}
